--- a/src/app/modules/layout/side-layout/side-layout.component.html
+++ b/src/app/modules/layout/side-layout/side-layout.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="main-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
+  <mat-drawer class="side-menu" #drawer mode="side">
     <p>Auto-resizing sidenav</p>
     <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
     <button (click)="showFiller = !showFiller" mat-raised-button>
@@ -7,10 +7,14 @@
     </button>
   </mat-drawer>
 
-  <div class="example-sidenav-content">
-    <button type="button" mat-button (click)="drawer.toggle()">
-      Toggle sidenav
+  <div class="sidenav-content">
+    <button class="side-menu-button" type="button" mat-button (click)="drawer.toggle()">
+      <!-- <mat-icon>menu</mat-icon> -->
+      <div class="circle"></div>
     </button>
+  </div>
+
+  <div class="main-content">
     <ng-content></ng-content>
   </div>
 </mat-drawer-container>
